--- a/composer.json
+++ b/composer.json
@@ -37,20 +37,20 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "doctrine/dbal": "latest",
-        "laravel/ui": "latest",
-        "livewire/livewire": "latest",
-        "nwidart/laravel-modules": "latest",
-        "spatie/laravel-permission": "latest",
-        "spatie/laravel-searchable": "latest",
-        "plank/laravel-metable": "latest",
-        "simshaun/recurr": "latest",
-        "nesbot/carbon": "latest",
-        "graham-campbell/markdown": "latest",
-        "barryvdh/laravel-dompdf": "latest",
-        "maatwebsite/excel": "latest",
-        "spatie/laravel-backup": "latest",
-        "spatie/laravel-medialibrary": "latest"
+        "doctrine/dbal": "^4.0.0-beta1",
+        "laravel/ui": "^4.0.2",
+        "livewire/livewire": "^2.10.7",
+        "nwidart/laravel-modules": "^9.0.6",
+        "spatie/laravel-permission": "^5.5.16",
+        "spatie/laravel-searchable": "^1.11.0",
+        "plank/laravel-metable": "^5.3.0",
+        "simshaun/recurr": "^5.0.1",
+        "nesbot/carbon": "^2.63.0",
+        "graham-campbell/markdown": "^14.0.0",
+        "barryvdh/laravel-dompdf": "^2.0.0",
+        "maatwebsite/excel": "^3.1.44",
+        "spatie/laravel-backup": "^8.1.5",
+        "spatie/laravel-medialibrary": "^10.7.1"
     },
     "scripts": {
         "post-autoload-dump": [
